second code commit

--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,7 @@
         <title>command prompt</title>
     </head>
     <body>
-        <h2>This is sriharsha</h2>
+        <h2>Using command prompt</h2>
+        <P>used github</P>
     </body>
 </html>
